--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			        <div id="code">
 			        	<span class="say"> Our Story</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> For  胡猫熊 &  overmind1980 </a></span><br>
+			        	<span class="say"> For  高雨蒙 &  赵鑫阳 </a></span><br>
 						<span class="say"> </span><br>
                         <span class="say"> 还记得我们相识的时候吗, 或许是缘分，或许是注定的。</span><br>
 						<span class="say"> </span><br>
@@ -37,7 +37,7 @@
 						<span class="say"> </span><br>
 			        	<span class="say"> 彼此依赖，彼此关心，彼此温暖，谢谢你这么包容我，喜欢我，爱我。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 我也爱你的善良，温柔，就是太容易吃醋了。。。</span><br>
+			        	<span class="say"> 我也爱你的善良，温柔，就是太容易生气了。。。</span><br>
 						<span class="say"> </span><br>
 			        	<span class="say"> 我性格好多缺点你也都看到。。。</span><br>
 						<span class="say"> </span><br>
@@ -45,11 +45,11 @@
                         <span class="say"> </span><br>
                         <span class="say"> ..永远的..</span><br>
 						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span>overmind1980 与 胡猫熊</span>
+                        <span class="say"><span class="space"></span>赵鑫阳 与 高雨蒙</span>
 			        </div>
                 </div>
                 <div id="clock-box">
-                    胡猫熊<span class="STYLE1">与</span>overmind1980<span class="STYLE1">已经相识了</span>
+                    高雨蒙<span class="STYLE1">与</span>赵鑫阳<span class="STYLE1">已经相识了</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -191,9 +191,9 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2014, 2,9); 			//时间年月日
-		    together.setHours(14);						//小时	
-		    together.setMinutes(15);					//分钟
+		    together.setFullYear(2017, 5,12); 			//时间年月日
+		    together.setHours(22);						//小时	
+		    together.setMinutes(30);					//分钟
 		    together.setSeconds(0);					//秒前一位
 		    together.setMilliseconds(0);				//秒第二位
 
