修改文字内容

--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
                         <span class="say"> </span><br>
                         <span class="say"> ..永远的..</span><br>
 						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span>赵鑫阳 与 高雨蒙</span>
 			        </div>
                 </div>
                 <div id="clock-box">
-                    高雨蒙<span class="STYLE1">与</span>赵鑫阳<span class="STYLE1">已经相识了</span>
+                    现在是高雨蒙<span class="STYLE1">与</span>赵鑫阳<span class="STYLE1">在一起的第</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
