修改文字内容

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<span class="say"> </span><br>
 			        	<span class="say"> 我也爱你的善良，温柔，就是太容易生气了。。。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 我性格好多缺点你也都看到。。。</span><br>
+			        	<span class="say"> 我有好多缺点你也都看到。。。</span><br>
 						<span class="say"> </span><br>
 			        	<span class="say"> 我想要和你在一起真实的感受生命，和你生活在一起,嫁给我吧！</span><br>
                         <span class="say"> </span><br>
@@ -48,7 +48,7 @@
 			        </div>
                 </div>
                 <div id="clock-box">
-                    现在是高雨蒙<span class="STYLE1">与</span>赵鑫阳<span class="STYLE1">在一起的第</span>
+                    现在是高雨蒙<span class="STYLE1">与</span>赵鑫阳<span class="STYLE1">在一起的</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
