上传自己的bgm

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
     <body>
 			<audio autoplay="autopaly">
-					<source src="http://oeasy.org/music/iloveu.mp3"audio/mp3" />
+					<source src="iloveu.mp3"audio/mp3" />
 			</audio>
         <div id="main">
     <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他浏览器的最新版本。</div>
@@ -41,7 +41,7 @@
 						<span class="say"> </span><br>
 			        	<span class="say"> 我有好多缺点你也都看到。。。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 我想要和你在一起真实的感受生命，和你生活在一起,嫁给我吧！</span><br>
+			        	<span class="say"> 我想要和你在一起真实的感受生命，和你生活在一起,爱你！</span><br>
                         <span class="say"> </span><br>
                         <span class="say"> ..永远的..</span><br>
 						<span class="say"> </span><br>
