删除不必要的格式

--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
     <script type="text/javascript" src="story/jscex-async-powerpack.js"></script>
     <script type="text/javascript" src="story/functions.js" charset="utf-8"></script>
     <script type="text/javascript" src="story/love.min.js" charset="utf-8"></script>
-    <style type="text/css">
-        .STYLE1 {
-            color: #666666
-        }
-    </style>
 
 </head>
 
@@ -55,7 +50,7 @@
                 </div>
             </div>
             <div id="clock-box">
-                现在是高雨蒙<span class="STYLE1">与</span>赵鑫阳<span class="STYLE1">在一起的</span>
+                现在是高雨蒙与赵鑫阳在一起的
                 <div id="clock"></div>
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
